# sn-graph

./: .gitignore  .pre-commit-config.yaml  404.html  Makefile  README.md  TODO.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: build-and-test.yml
assets/: cup.glb  cup.stl  cup_0085.off
demo_sn-graph/: index.html
docs/: 3D_demo.ipynb  demo_sn-graph.ipynb  index.md  installation.md  mnist_classification.ipynb  quickstart.md  reference.md  tutorials.md  tutorials_intro.md
docs/source/: conf.py  index.rst  modules.rst  sn_graph.core.rst  sn_graph.rst  sn_graph.visualisation.rst
installation/: index.html
mnist_classification/: index.html
notebooks/: 3D_demo.ipynb  best_model.pth  demo_sn-graph.ipynb  mnist_classification.ipynb
reference/: index.html
src/sn-graph/: core.py
src/sn_graph/: __init__.py  core.py  visualisation.py
tests/: conftest.py  test_edge_generation.py  test_input_type.py  test_nd_volume.py  test_sphere_generation.py  test_validate_args.py  test_visualisation.py
tutorials_intro/: index.html
