[tool.poetry]
name = "sn-graph"
version = "0.1.0"
description = "A Python implementation of SN-Graph algorithm."
authors = ["Tomasz Prytula <tomasz.prytula@alexandra.dk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
