[tool.poetry]
name = "sn-graph"
version = "0.1.0"
description = "A Python implementation of SN-Graph algorithm."
authors = ["Tomasz Prytula <tomasz.prytula@alexandra.dk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "2.0"
matplotlib = "^3.9.3"
scikit-image = "^0.24.0"
scikit-fmm = "^2024.9.16"
numba = "^0.60.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
